<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".profile.LoginFragment">

        <!--Background banner-->
        <ImageView
            android:id="@+id/grayBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@+string/Gray Banner"
            android:src="@drawable/ic_rectangle_1"
            tools:ignore="ImageContrastCheck" />

        <!--Email input settings-->
        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/search_box"
            android:ems="10"
            android:fontFamily="@font/sofia_pro_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAlignment="textEnd"
            tools:ignore="SpeakableTextPresentCheck" />

        <!--Password input settings-->
        <EditText
            android:id="@+id/password"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_below="@+id/emailAddress"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:background="@drawable/search_box"
            android:ems="10"
            android:fontFamily="@font/sofia_pro_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="textEnd" />

        <!--Checkbox settings-->
        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="135dp"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="Remember me"
            tools:ignore="HardcodedText" />

        <!--Login button settings-->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="145dp"
            android:layout_marginTop="280dp"
            android:background="@drawable/button_box"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="Login"
            android:textAllCaps="false"
            tools:ignore="HardcodedText" />

        <!--Sign up button settings-->
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="145dp"
            android:layout_marginTop="345dp"
            android:background="@drawable/button_box"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="Sign Up"
            android:textAllCaps="false"
            tools:ignore="HardcodedText" />

        <!--Forgot Password button settings-->
        <Button
            android:id="@+id/forgotPassButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="145dp"
            android:layout_marginTop="410dp"
            android:background="@drawable/button_box"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="Forgot Password"
            android:textAllCaps="false"
            tools:ignore="HardcodedText" />

    </RelativeLayout>

</layout>