<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Background banner-->
        <ImageView
            android:id="@+id/grayBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@+string/Gray Banner"
            android:src="@drawable/ic_rectangle_1"
            tools:ignore="ImageContrastCheck" />

        <!--Email input settings-->
        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/search_box"
            android:ems="10"
            android:fontFamily="@font/sofia_pro_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAlignment="textEnd"
            tools:ignore="SpeakableTextPresentCheck" />

        <!--Password input settings-->
        <EditText
            android:id="@+id/password"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_below="@+id/emailAddress"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/search_box"
            android:ems="10"
            android:fontFamily="@font/sofia_pro_regular"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="textEnd" />

        <!--Confirm Password input settings-->
        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_below="@+id/password"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/search_box"
            android:ems="10"
            android:fontFamily="@font/sofia_pro_regular"
            android:hint="Confirm Password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="textEnd"
            tools:ignore="HardcodedText" />

        <!--Sign up button settings-->
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_below="@+id/confirmPassword"
            android:layout_alignParentStart="true"
            android:layout_marginStart="145dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_box"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="Sign Up"
            android:textAllCaps="false"
            tools:ignore="HardcodedText" />

    </RelativeLayout>

</FrameLayout>